--- a/style.css
+++ b/style.css
@@ -100,10 +100,165 @@ margin-right: 260px;
 }
 
 .menu-models__item_active::after {
+  left: 0;
   display: block;
   content: "";
   position: absolute;
   background-color: #E51937;
   width: 100%;
   height: 2px;
+}
+
+@media (max-width: 375px) {
+
+  .menu-models, .shop {
+    display: none;
+  }
+
+ .logo {
+   width: 37.5%;
+   margin-left: 0;
+   margin-right: 51%;
+   margin-top: 13%;
+   background-size: contain;
+ }
+
+.menu-mobile {
+  top: 21px;
+  margin-top: 13%;
+}
+
+.menu-mobile::before {
+  transform: translateY(-7px)
+}
+
+.menu-mobile::after {
+  transform: translateY(4px)
+}
+}
+
+@media (min-width: 376px) and (max-width: 768px) {
+
+  .menu-models, .shop {
+    display: none;
+  }
+
+  .header {
+  padding-top: 3.1%;
+  }
+
+  .logo {
+    width: 22%;
+    margin-left: 2.1%;
+    margin-right: 67%;
+    background-size: contain;
+  }
+
+ .menu-mobile {
+  width: 5%;
+ }
+
+ .menu-mobile::before {
+  width: auto;
+  transform: translateY(-10px)
+ }
+
+ .menu-mobile::after {
+  width: auto;
+  transform: translateY(7px)
+ }
+}
+
+@media (min-width: 1440px) {
+  .logo {
+    background-size: contain;
+    margin-right: 17.4%;
+    width: 12%;
+    margin-left: 3%;
+  }
+
+ .menu-models {
+   margin-right: 14.4%;
+   width: 35%;
+ }
+
+ .menu-models__item_models {
+   margin-right: 12%;
+   font-size: 16px;
+ }
+
+ .menu-models__item_modelx {
+   font-size: 16px;
+   margin-right: 5%;
+ }
+
+ .menu-models__item_model3 {
+   font-size: 16px;
+   margin-right: 7.5%;
+ }
+
+ .menu-models__item_roadster {
+   font-size: 16px;
+   margin-right: 8.5%;
+ }
+
+ .menu-models__item_energy {
+   font-size: 16px;
+ }
+
+ .menu-models__item_active::after {
+  top: 133%;
+ }
+
+ .shop {
+   margin-right: 2.2%;
+   width: 10.1%;
+ }
+
+ .shop__item_buy {
+   margin-right: 18%;
+   font-size: 16px;
+ }
+
+ .shop__item_enter {
+   font-size: 16px;
+ }
+
+ .menu-mobile::after {
+  transform: translateY(135%)
+ }
+
+ .menu-mobile::before {
+  transform: translateY(-229%)
+ }
+}
+
+@media (min-width: 769px) and (max-width: 1439px) {
+  .logo {
+    background-size: contain;
+    margin-right: 10%;
+    width: 12%;
+    margin-left: 3%;
+  }
+
+ .menu-models__item_models, .menu-models__item_modelx, .menu-models__item_model3, .menu-models__item_roadster, .menu-models__item_energy, .shop__item_buy, .shop__item_enter {
+   font-size: 15px;
+   margin-right: 4%;
+ }
+
+ .menu-models {
+   padding-top: 1%;
+   width: 50%;
+   margin-right: 1%;
+ }
+
+ .shop {
+   padding-top: 1%;
+   width: 20%;
+   margin-right: 1%;
+ }
+
+
+
+
 }
