--- a/style.css
+++ b/style.css
@@ -258,7 +258,7 @@ margin-right: 260px;
    margin-right: 1%;
  }
 }
-
+/*секция main*/
 .main {
   background-repeat: no-repeat;
   background-image: url(img/teslatxt.svg);
@@ -438,13 +438,14 @@ margin-right: 260px;
  }
 
   .main__title {
-    width: 350px;
+    width: 360px;
     Height: 100px;
-    margin-left: 15%;
+    margin-left: 27%;
+    margin-bottom: 1.2%;
   }
   .main__welcome {
     width: 75%;
-    font-size: 15px;
+    font-size: 17px;
     margin-left: 34.5%;
     position: relative;
     top: -28px;
@@ -452,12 +453,13 @@ margin-right: 260px;
   }
 
 .main__picture {
-  width: 99%;
+  height: 329px;
+  width: 92%;
   margin-bottom: 4%;
 }
 
 .info {
-  margin-bottom: 3%;
+  margin-bottom: 3.2%;
   margin-left: 0;
   width: 100%;
 }
@@ -468,14 +470,14 @@ margin-right: 260px;
 
  .info__spkm_speed {
    background-image: url(img/2,7Ipad.svg);
-   margin-left: 4.5%;
+   margin-left: 18.5%;
    width: 220.7px;
    height: 81.26px;
 }
 
 .info__spkm_km {
   background-image: url(img/632Ipad.svg);
-  margin-left: 1%;
+  margin-left: 8%;
   width: 200.64px;
   height: 83.12px;
 }
@@ -484,16 +486,17 @@ margin-right: 260px;
   background-image: url(img/TestdriveIpad.svg);
   width: 168px;
   height: 52px;
-  margin-left: 5.5%;
+  margin-left: 22.5%;
   top: -6px;
 }
 
 .info__more_order {
+  padding-top: 16px;
   margin-left: 3.4%;
   width: 224px;
   top: -37px;
   height: 57px;
-  font-size: 23px;
+  font-size: 18px;
   background: #E51937;
   color: #FFFFFF;
 }
@@ -649,4 +652,141 @@ background-position-y: -7%;
   width: 32px;
   height: 20px;
 }
+}
+/*Секция future*/
+.future {
+  background-repeat: no-repeat;
+  background-image: url(img/tesla_inside.svg);
+  background-position-y: 48%;
+  padding-left: 69.4%;
+  width: 30.6%;
+}
+
+.future__title {
+  top: 111px;
+  position: relative;
+  left: -207%;
+  width: 278px;
+  height: 86px;
+  background-repeat: no-repeat;
+  background-size: contain;
+  background-image: url(img/ModelSfut.svg);
+}
+
+.info-models {
+  position: relative;
+  top: -95px;
+  background: #E51937;
+  width: 100%;
+}
+
+.drive, .options {
+  width: 76%;
+  margin: auto;
+}
+
+.drive {
+  margin-bottom: 58px;
+}
+
+.drive__title {
+  padding-top: 16%;
+  margin-bottom: 0;
+  text-align: center;
+  color: #ffffff;
+  font-size: 30px;
+  font-weight: 600;
+  font-family: "montserratregular", arial, helvetica, sans-serif;
+}
+
+.drive__text {
+  width: 91%;
+  font-size: 16px;
+  color: #ffffff;
+  font-family: "montserratregular", arial, helvetica, sans-serif;
+}
+
+.options {
+  margin-bottom: 38%;
+}
+
+.options__display {
+  margin-bottom: 10%;
+  width: 187px;
+  height: 65px;
+  background-repeat: no-repeat;
+  background-size: contain;
+  background-image: url(img/display.svg);
+}
+
+.options__wifi {
+  margin-bottom: 8%;
+  width: 269px;
+  height: 71px;
+  background-repeat: no-repeat;
+  background-size: contain;
+  background-image: url(img/wifi.svg);
+}
+
+.options__bag {
+  width: 202px;
+  height: 71px;
+  background-repeat: no-repeat;
+  background-size: contain;
+  background-image: url(img/bag.svg);
+}
+
+.more__info {
+  position: relative;
+  left: 15%;
+  width: 50%;
+  display: inline-block;
+  text-decoration: none;
+  font-size: 15px;
+  color: #ffffff;
+  font-family: "montserratregular", arial, helvetica, sans-serif;
+}
+
+.more__info::before {
+  left: -3%;
+  width: 5%;
+  position: relative;
+  display: inline-block;
+  content: "i";
+  font-size: 13px;
+  color: #ffffff;
+  font-family: "montserratregular", arial, helvetica, sans-serif;
+}
+
+.more__info::after {
+  position: relative;
+  top: 10px;
+  display: inline-block;
+  content: "";
+  width: 20px;
+  height: 20px;
+  border-radius: 50%;
+  color: #ffffff;
+  border: solid 2px;
+  left: -70%;
+}
+
+.more__order {
+  padding-top: 11px;
+  position: relative;
+  top: 2px;
+  text-align: center;
+  width: 155px;
+  height: 37px;
+  display: inline-block;
+  text-decoration: none;
+  font-size: 14px;
+  color: #ffffff;
+  font-family: "montserratregular", arial, helvetica, sans-serif;
+  border: solid 2px;
+  margin-left: 3%;
+}
+
+.more {
+  padding-bottom: 12%;
 }
