--- a/style.css
+++ b/style.css
@@ -1018,6 +1018,58 @@ background-position-y: -7%;
   background-repeat: no-repeat;
 }
 
+.more-safety__info {
+  position: relative;
+  left: 15%;
+  width: 50%;
+  display: inline-block;
+  text-decoration: none;
+  font-size: 15px;
+  color: #ffffff;
+  font-family: "montserratregular", arial, helvetica, sans-serif;
+}
+
+.more-safety__info::before {
+  left: -3%;
+  width: 5%;
+  position: relative;
+  display: inline-block;
+  content: "i";
+  font-size: 13px;
+  color: #ffffff;
+  font-family: "montserratregular", arial, helvetica, sans-serif;
+}
+
+.more-safety__info::after {
+  position: relative;
+  top: 10px;
+  display: inline-block;
+  content: "";
+  width: 20px;
+  height: 20px;
+  border-radius: 50%;
+  color: #ffffff;
+  border: solid 2px;
+  left: -70%;
+}
+
+.more-safety__order {
+  padding-top: 11px;
+  position: relative;
+  top: 2px;
+  text-align: center;
+  width: 155px;
+  height: 26px;
+  display: inline-block;
+  text-decoration: none;
+  font-size: 14px;
+  color: #ffffff;
+  font-family: "montserratregular", arial, helvetica, sans-serif;
+  border: solid 2px;
+  margin-left: 3%;
+}
+
+
 .safety__img {
   top: -500px;
   left: 77%;
@@ -1026,5 +1078,38 @@ background-position-y: -7%;
   height: 540px;
   background-repeat: no-repeat;
   background-size: contain;
-  background-image: url(img/carframe.svg);
+  background-image: url(img/Carframegroup.svg);
+}
+
+.safety__img_front {
+  position: relative;
+  background-repeat: no-repeat;
+  background-size: contain;
+  width: 200px;
+  height: 200px;
+  background-image: url(img/Protection1.svg);
+  left: 25%;
+  top: 2%;
+}
+
+.safety__img_side {
+  position: relative;
+  background-repeat: no-repeat;
+  background-size: contain;
+  width: 200px;
+  height: 200px;
+  background-image: url(img/Protection2.svg);
+  left: 52%;
+  top: -52%;
+}
+
+.safety__img_crash {
+  position: relative;
+  background-repeat: no-repeat;
+  background-size: contain;
+  width: 200px;
+  height: 200px;
+  background-image: url(img/Carcrash.svg);
+  left: 57%;
+  top: -23%;
 }
