--- a/style.css
+++ b/style.css
@@ -923,20 +923,22 @@ background-position-y: -7%;
 /* section safeety*/
 
 .safety {
-  width: 30%;
-  padding-right: 70%;
+  width: 30.6%;
+  padding-right: 69.4%;
   background-repeat: no-repeat;
-  background-image: url(omg/ModelS.svg);
+  background-image: url(img/ModelS.svg);
 }
 
 .info-safety {
   width: 100%;
+  position: relative;
+  top: -136px;
   background: #E51937;
 }
 
 .description {
-  width: 85%;
-  margin: auto;
+  width: 100%;
+  margin-bottom: 15%;
 }
 
 .description__title {
@@ -944,31 +946,39 @@ background-position-y: -7%;
   font-family: "montserratregular", arial, helvetica, sans-serif;
   font-size: 30px;
   font-weight: 600;
+  padding-top: 12%;
+  margin-left: 13%;
+  margin-bottom: 0;
 }
 
 .description__text {
   color: #ffffff;
   font-family: "montserratregular", arial, helvetica, sans-serif;
-  font-size: 15px;
+  font-size: 16px;
   font-weight: 500;
+  margin-left: 13%;
+  width: 69%;
 }
 
 .protection__title {
+  margin-left: 13%;
   background-image: url(img/Оценказащиты.svg);
   background-repeat: no-repeat;
   width: 265px;
   height: 40px;
+  margin-bottom: 3.3%;
 }
 
 .protection__front_title, .protection__side_title, .protection__rack_title, .protection__driver_title, .protection__passangeer_title  {
   font-family: "montserratregular", arial, helvetica, sans-serif;
-  font-size: 17px;
+  font-size: 18px;
   color: #fff;
 }
 
 .protection__front, .protection__side, .protection__rack, .protection__driver, .protection__passangeer {
   display: inline-flex;
   width: 100%;
+  margin-left: 13%;
 }
 
 .protection__front_star1, .protection__front_star2, .protection__front_star3, .protection__front_star4, .protection__front_star5 {
