--- a/style.css
+++ b/style.css
@@ -692,7 +692,7 @@ background-position-y: -7%;
 .drive__title {
   padding-top: 16%;
   margin-bottom: 0;
-  text-align: center;
+  text-align: left;
   color: #ffffff;
   font-size: 30px;
   font-weight: 600;
@@ -739,8 +739,8 @@ background-position-y: -7%;
 
 .more__info {
   position: relative;
-  left: 15%;
-  width: 50%;
+  left: 11%;
+  width: 44%;
   display: inline-block;
   text-decoration: none;
   font-size: 15px;
@@ -748,8 +748,8 @@ background-position-y: -7%;
   font-family: "montserratregular", arial, helvetica, sans-serif;
 }
 
-.more__info::before {
-  left: -3%;
+.more__icon::before {
+  left: 39%;
   width: 5%;
   position: relative;
   display: inline-block;
@@ -759,9 +759,9 @@ background-position-y: -7%;
   font-family: "montserratregular", arial, helvetica, sans-serif;
 }
 
-.more__info::after {
+.more__icon {
   position: relative;
-  top: 10px;
+  top: 1%;
   display: inline-block;
   content: "";
   width: 20px;
@@ -769,7 +769,7 @@ background-position-y: -7%;
   border-radius: 50%;
   color: #ffffff;
   border: solid 2px;
-  left: -70%;
+  left: 11%;
 }
 
 .more__order {
@@ -843,8 +843,8 @@ background-position-y: -7%;
  }
 
  .future__title {
-   top: -485px;
-   left: 57%;
+   top: -488px;
+   left: 57.3%;
  }
 
 .info-models {
@@ -854,7 +854,7 @@ background-position-y: -7%;
 .drive__title {
   padding-top: 0;
   position: relative;
-  left: -2.5%;
+  margin-left: 9%;
   top: 18px;
   margin-bottom: 11%;
 }
@@ -862,25 +862,25 @@ background-position-y: -7%;
 .drive__text {
   width: 84%;
   position: relative;
-  left: 9%;
+  margin-left: 9%;
 }
 
 .options__display {
   position: relative;
   left: 19.5%;
-  top: 20px;
+  top: 24px;
 }
 
 .options__wifi {
   position: relative;
   left: 18.5%;
-  top: 5px;
+  top: 7px;
 }
 
 .options__bag {
   position: relative;
   left: 19.5%;
-  top: -4px;
+  top: -2px;
 }
 
 .more {
@@ -890,25 +890,26 @@ background-position-y: -7%;
 
 .more__info {
   font-size: 18px;
-  left: 23%;
+  margin-left: 1%;
   top: 4px;
+  width: 35%;
 }
 
-.more__info::before {
+.more__icon::before {
   font-size: 19px;
   font-weight: 900;
-  left: -2.5%;
+  left: 40%;
 }
 
-.more__info::after {
-  left: -50%;
-  top: 8px;
+.more__icon {
+  margin-left: 9%;
+  top: 5px;
   width: 27px;
   height: 27px;
 }
 
 .more__order {
-  width: 210px;
+  width: 217px;
   height: 39px;
   font-size: 19px;
   margin-left: 0;
@@ -928,6 +929,8 @@ background-position-y: -7%;
   padding-right: 69.4%;
   background-repeat: no-repeat;
   background-image: url(img/ModelS.svg);
+  background-position-x: 100%;
+  background-position-y: 0.4%;
 }
 
 .info-safety {
@@ -1156,17 +1159,17 @@ background-position-y: -7%;
 
 .more-safety__info {
   position: relative;
-  left: 15%;
-  width: 50%;
+  width: 32%;
+  margin-left: 9%;
   display: inline-block;
   text-decoration: none;
-  font-size: 15px;
+  font-size: 12px;
   color: #ffffff;
   font-family: "montserratregular", arial, helvetica, sans-serif;
 }
 
-.more-safety__info::before {
-  left: -3%;
+.more-safety__icon::after {
+  left: 36%;
   width: 5%;
   position: relative;
   display: inline-block;
@@ -1176,9 +1179,8 @@ background-position-y: -7%;
   font-family: "montserratregular", arial, helvetica, sans-serif;
 }
 
-.more-safety__info::after {
+.more-safety__icon {
   position: relative;
-  top: 10px;
   display: inline-block;
   content: "";
   width: 20px;
@@ -1186,7 +1188,8 @@ background-position-y: -7%;
   border-radius: 50%;
   color: #ffffff;
   border: solid 2px;
-  left: -70%;
+  left: 8.5%;
+  top: 1%;
 }
 
 .more-safety__order {
@@ -1248,4 +1251,188 @@ background-position-y: -7%;
   background-image: url(img/Carcrash.svg);
   left: 57%;
   top: -23%;
+}
+
+@media (max-width: 375px) {
+
+  .protection, .info-safety__result, .more-safety {
+    display: none;
+  }
+
+.safety {position: relative;
+  top: -47px;
+  width: 100%;
+  padding-top: 78.5%;
+  background-size: 107%;
+  background-position-x: 0%;
+  background-position-y: 0%;
+  padding-right: 0;
+}
+
+.safety__img {
+  background-image: url(img/Group18mobile.svg);
+  top: -629px;
+  left: -1%;
+  width: 97%;
+}
+
+.description__title {
+  padding-top: 6%;
+  margin-left: 8%;
+}
+
+.description__text {
+  margin-left: 8%;
+  width: 83%;
+}
+
+.info-safety {
+  padding-bottom: 4%;
+  top: -89px;
+}
+}
+
+@media (min-width: 376px) and (max-width: 768px) {
+
+.info-safety__result {
+  display: none;
+}
+
+.safety {
+  position: relative;
+  top: -29px;
+  background-size: 77%;
+  background-position-x: 55%;
+  background-position-y: 0;
+  width: 100%;
+  padding-right: 0;
+  padding-top: 57%;
+}
+
+.info-safety {
+  top: 30px;
+}
+
+.safety__img {
+  background-image: url(img/CargroupIpad.svg);
+  top: -919px;
+  left: 0%;
+  width: 96%;
+}
+
+.info-safety {
+  display: inline-block;
+  top: 30px;
+}
+
+.description {
+  display: inline-block;
+  width: 49%;
+  margin-bottom: 0;
+}
+
+.protection {
+  left: -1%;
+  display: inline-block;
+  width: 49%;
+  position: relative;
+  top: 12px;
+  margin-bottom: 0;
+}
+
+.description__title {
+  margin-left: 9%;
+  padding-top: 7%;
+}
+
+.description__text {
+  margin-left: 9%;
+  width: 82%;
+}
+
+.protection__front {
+  position: relative;
+  top: 5px;
+}
+
+.protection__front_star1 {
+  margin-left: 17%;
+}
+
+.protection__side {
+  position: relative;
+  top: 4px;
+}
+
+.protection__side_star1 {
+  margin-left: 24%;
+}
+
+.protection__rack  {
+  position: relative;
+  top: 5px;
+}
+
+.protection__rack_star1 {
+  margin-left: 9%;
+}
+
+.litle {
+  font-size: 12px;
+  margin-left: 6%;
+}
+
+.protection__driver {
+  position: relative;
+  top: 8px;
+}
+
+.protection__driver_star1 {
+  margin-left: 14.2%;
+}
+
+.protection__passangeer {
+  position: relative;
+  top: 9px;
+}
+
+.protection__passangeer_star1 {
+  margin-left: 12.5%;
+}
+
+.more-safety {
+  padding-bottom: 7.2%;
+  margin-top: 11%;
+}
+
+.more-safety__icon {
+  margin-left: 11.6%;
+  width: 27px;
+  height: 27px;
+  top: -5px;
+}
+
+.more-safety__icon::after {
+  left: 37%;
+  font-weight: 900;
+  font-size: 20px;
+}
+
+.more-safety__info {
+  font-size: 16px;
+  margin-left: 9.5%;
+  width: 25%;
+  top: -8px;
+}
+
+.more-safety__order {
+  margin-left: 0;
+  width: 216px;
+  height: 35px;
+  top: -8px;
+  font-size: 18px;
+  padding-top: 15px;
+}
+
+
 }
