--- a/style.css
+++ b/style.css
@@ -988,6 +988,7 @@ background-position-y: -7%;
   font-size: 18px;
   color: #fff;
   padding-top: 4px;
+  margin-right: 14%;
 }
 
 
@@ -997,7 +998,6 @@ background-position-y: -7%;
   background-image: url(img/Star.svg);
   background-repeat: no-repeat;
   display: inline-block;
-  margin-left: 14%;
   margin-right: 2px;
 }
 
@@ -1022,6 +1022,7 @@ background-position-y: -7%;
   font-size: 18px;
   color: #fff;
   padding-top: 4px;
+  margin-right: 20%;
 }
 
 .protection__side_star1 {
@@ -1030,7 +1031,6 @@ background-position-y: -7%;
   background-image: url(img/Star.svg);
   background-repeat: no-repeat;
   display: inline-block;
-  margin-left: 20%;
   margin-right: 2px;
 }
 
@@ -1060,6 +1060,7 @@ background-position-y: -7%;
   font-size: 18px;
   color: #fff;
   padding-top: 4px;
+  margin-right: -0.3%;
 }
 
 .protection__rack_star1 {
@@ -1068,7 +1069,6 @@ background-position-y: -7%;
   background-image: url(img/Star.svg);
   background-repeat: no-repeat;
   display: inline-block;
-  margin-left: 9.7%;
   margin-right: 2px;
 }
 
@@ -1093,6 +1093,7 @@ background-position-y: -7%;
   font-size: 18px;
   color: #fff;
   padding-top: 4px;
+  margin-right: 12%;
 }
 
 .protection__driver_star1 {
@@ -1101,7 +1102,6 @@ background-position-y: -7%;
   background-image: url(img/Star.svg);
   background-repeat: no-repeat;
   display: inline-block;
-  margin-left: 12%;
   margin-right: 2px;
 }
 
@@ -1126,6 +1126,7 @@ background-position-y: -7%;
   font-size: 18px;
   color: #fff;
   padding-top: 4px;
+  margin-right: 10%;
 }
 
 .protection__passangeer_star1 {
@@ -1134,7 +1135,6 @@ background-position-y: -7%;
   background-image: url(img/Star.svg);
   background-repeat: no-repeat;
   display: inline-block;
-  margin-left: 10%;
   margin-right: 2px;
 }
 
